completed project header

--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
   <header class="head-container">
     <p class="result-of-container">Your Result</p>
     <div class="div-of-container">
-     <h1>76</h1>
-     <small>of 100</small>
+
+      <h1 class="h1-76">76</h1>
+      <small class="of-100">of 100</small>
+      
     </div>
 
-    <h2>Great</h2>
-    <small>You scored higher than 65% of the people who have taken these tests.</small>
+    <h2 class="sub-title">Great</h2>
+    <p class="paragaph">You scored higher than 65% of the people who have taken these tests.</p>
 
   </header>
 
