--- a/index.html
+++ b/index.html
@@ -53,32 +53,32 @@
         <div >
           <img src="/assets/images/icon-reaction.svg" alt="image Reaction">
           <span>Reaction</span>
-        </div>
-        <span class="number-reaction">80 / 100</span>
+        </div class="number-reaction">
+        <span class="reaction-score-0">80 / <span class="reaction-score-1">100</span></span>
       </li>
 
       <li class="memory">
         <div>
           <img src="/assets/images/icon-memory.svg" alt="image Memory">
           <span>Memory</span>
-        </div>
-        <span class="number-memory">92 / 100</span>
+        </div class="number-memory">
+        <span class="memory-score-0">92 / <span class="memory-score-1">100</span></span>
       </li>
 
       <li class="verbal">
         <div>
           <img src="/assets/images/icon-verbal.svg" alt=" image Verbal">
           <span>Verbal </span>
-        </div>
-        <span class="number-verbal">61 / 100</span>
+        </div class="number-verbal">
+        <span class="verbal-score-0">61 / <span class="verbal-score-1"> 100</span></span>
       </li>
 
       <li class="visual">
         <div>
           <img src="/assets/images/icon-visual.svg" alt="image Visual">
           <span>Visual</span>
-        </div>
-        <span class="number-visual">72 / 100</span>
+        </div class="number-visual">
+        <span class="visual-score-0">72 / <span class="visual-score-1"> 100</span></span>
       </li>
     </ul>
 
