--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <ul class="list-container">
       <li class="reaction">
         <div >
-          <img src="/assets/images/icon-reaction.svg" alt="image Reaction">
+          <img src="./assets/images/icon-reaction.svg" alt="image Reaction">
           <span>Reaction</span>
         </div class="number-reaction">
         <span class="reaction-score-0">80 / <span class="reaction-score-1">100</span></span>
