--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <li class="memory">
         <div>
-          <img src="/assets/images/icon-memory.svg" alt="image Memory">
+          <img src="./assets/images/icon-memory.svg" alt="image Memory">
           <span>Memory</span>
         </div class="number-memory">
         <span class="memory-score-0">92 / <span class="memory-score-1">100</span></span>
@@ -67,7 +67,7 @@
 
       <li class="verbal">
         <div>
-          <img src="/assets/images/icon-verbal.svg" alt=" image Verbal">
+          <img src="./assets/images/icon-verbal.svg" alt=" image Verbal">
           <span>Verbal </span>
         </div class="number-verbal">
         <span class="verbal-score-0">61 / <span class="verbal-score-1"> 100</span></span>
@@ -75,7 +75,7 @@
 
       <li class="visual">
         <div>
-          <img src="/assets/images/icon-visual.svg" alt="image Visual">
+          <img src="./assets/images/icon-visual.svg" alt="image Visual">
           <span>Visual</span>
         </div class="number-visual">
         <span class="visual-score-0">72 / <span class="visual-score-1"> 100</span></span>
